// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metamask.vue Should show a "Connect with Metamask" button if no account connected 1`] = `
<div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text" style="display: none;">
    You need Metamask in order to interact with this contract
  </div>
  <div class="v-card__text" style="">
    <div class="row">
      <div class="col col-6">
        <!----> <button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Connect With Metamask</span></button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Metamask.vue Should show an error is Metamask is not on the expected network 1`] = `
<div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text" style="display: none;">
    You need Metamask in order to interact with this contract
  </div>
  <div class="v-card__text" style="">
    <div class="row">
      <div class="col col-6">
        <div role="alert" class="v-alert v-sheet v-sheet--outlined theme--light v-alert--dense v-alert--outlined error--text">
          <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--light error--text"></i>
            <div class="v-alert__content">
              Invalid chain id <b>0x2</b> (2), expecting <b>0x1</b> (1). Click <a>here</a> to switch network in Metamask.
            </div>
          </div>
        </div>
        <div><b>Connected Metamask account:</b> 0x1234
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Metamask.vue Should show an explaination message if no metamask 1`] = `
<div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text">
    You need Metamask in order to interact with this contract
  </div>
  <div class="v-card__text" style="display: none;">
    <div class="row">
      <div class="col col-6">
        <!----> <button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Connect With Metamask</span></button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Metamask.vue Should show the address when an account is connected 1`] = `
<div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text" style="display: none;">
    You need Metamask in order to interact with this contract
  </div>
  <div class="v-card__text" style="">
    <div class="row">
      <div class="col col-6">
        <!---->
        <div><b>Connected Metamask account:</b> 0x1234
        </div>
      </div>
    </div>
  </div>
</div>
`;
